--- a/templates/Front/Content/Registration/register.html.twig
+++ b/templates/Front/Content/Registration/register.html.twig
@@ -28,14 +28,14 @@
                     </div>
                     <div class="wrap-article__row">
                         <div class="wrap-article__row__full">
-                            <div class="form-line">
+                            <div class="form-line js-form-line">
                                 <div class="form-line__input">
                                     <label class="input-label" for="{{ form.customerUserData.email.vars.id }}">
                                         {{ 'E-mail'|trans }}
                                     </label>
                                     {{ form_widget(form.customerUserData.email, { attr: {'data-request-url' : url('front_registration_exists_email') } }) }}
                                 </div>
-                                <div class="form-line__error">
+                                <div class="form-line__error js-form-line-error">
                                     {{ form_errors(form.customerUserData.email, {errors_attr: { class: 'form-error--under' }}) }}
                                 </div>
                             </div>
