--- a/templates/Front/Form/theme.html.twig
+++ b/templates/Front/Form/theme.html.twig
@@ -41,7 +41,7 @@
             {{ form_widget(form) }}
             {{ block('icon') }}
         </div>
-        <div class="form-line__error {{ errorModificationClass|default('') }}">
+        <div class="form-line__error {{ errorModificationClass|default('') }} js-form-line-error">
             {% set errors_attr = errors_attr|default({})|merge({'class': (errors_attr.class|default('form-error--line'))}) %}
             {{ form_errors(form, { errors_attr: errors_attr } ) }}
         </div>
@@ -61,12 +61,12 @@
 {% endblock checkbox_row %}
 
 {% block textarea_row -%}
-    <div class="{{ rowClass|default('form-line') }}">
+    <div class="{{ rowClass|default('form-line') }} js-form-line">
         <div class="form-line__input">
             {{ form_label(form, label, { withoutColon: true }) }}
             {{- form_widget(form) -}}
         </div>
-        <div class="form-line__error">
+        <div class="form-line__error js-form-line-error">
             {% set errors_attr = errors_attr|default({})|merge({'class': (errors_attr.class|default('form-error--line'))}) %}
             {{ form_errors(form, { errors_attr: errors_attr } ) }}
         </div>
