--- a/templates/Front/Content/Product/bestsellingProductsListVertical.html.twig
+++ b/templates/Front/Content/Product/bestsellingProductsListVertical.html.twig
@@ -4,46 +4,48 @@
         <div class="list-products-line__wrap">
             <ul class="list-products-line__list">
                 {% for productView in productViews %}
-                    <li class="list-products-line__item js-bestselling-product{% if (loop.index > maxShownProducts )%} display-none{% endif %}">
-                        <a href="{{ url('front_product_detail', {'id': productView.id}) }}" class="list-products-line__item__block">
-                            <div class="list-products-line__item__position">
-                                {{ loop.index }}.
-                            </div>
-                            <div class="list-products-line__item__image">
-                                {{ image(productView.image, { size: 'mediumThumbnail', alt: productView.name }) }}
-                            </div>
-                            <div class="list-products-line__item__content">
-                                <h3 class="list-products-line__item__title">
-                                    {{ productView.name }}
-                                </h3>
+                    {% if loop.index <= maxShownProducts %}
+                        <li class="list-products-line__item js-bestselling-product">
+                            <a href="{{ url('front_product_detail', {'id': productView.id}) }}" class="list-products-line__item__block">
+                                <div class="list-products-line__item__position">
+                                    {{ loop.index }}.
+                                </div>
+                                <div class="list-products-line__item__image">
+                                    {{ image(productView.image, { size: 'mediumThumbnail', alt: productView.name }) }}
+                                </div>
+                                <div class="list-products-line__item__content">
+                                    <h3 class="list-products-line__item__title">
+                                        {{ productView.name }}
+                                    </h3>
 
-                                <div class="list-products-line__item__content__bottom">
-                                    {% set productSellingPrice = productView.sellingPrice %}
-                                    {% if productSellingPrice is not null %}
-                                        <div class="list-products-line__item__price">
-                                            {% if productSellingPrice.priceFrom %}
-                                                {{ 'from %price%'|trans({'%price%': productSellingPrice.priceWithVat|price}) }}
-                                            {% else %}
-                                                {{ productSellingPrice.priceWithVat|price }}
-                                            {% endif %}
+                                    <div class="list-products-line__item__content__bottom">
+                                        {% set productSellingPrice = productView.sellingPrice %}
+                                        {% if productSellingPrice is not null %}
+                                            <div class="list-products-line__item__price">
+                                                {% if productSellingPrice.priceFrom %}
+                                                    {{ 'from %price%'|trans({'%price%': productSellingPrice.priceWithVat|price}) }}
+                                                {% else %}
+                                                    {{ productSellingPrice.priceWithVat|price }}
+                                                {% endif %}
 
-                                            {% if productSellingPrice.hasHigherStandardPrice %}
-                                                <div class="list-products-line__item__price__old">
-                                                    {{ productSellingPrice.standardPrice.priceWithVat|price }}
-                                                </div>
-                                            {% endif %}
-                                        </div>
-                                    {% endif %}
+                                                {% if productSellingPrice.hasHigherStandardPrice %}
+                                                    <div class="list-products-line__item__price__old">
+                                                        {{ productSellingPrice.standardPrice.priceWithVat|price }}
+                                                    </div>
+                                                {% endif %}
+                                            </div>
+                                        {% endif %}
 
-                                    <div class="in-availability in-availability--without-gap">
-                                        <div class="in-availability__text" style="color: {{ getAvailabilityColor(productView.availability) }};">
-                                            {% include 'Front/Content/Product/productViewAvailability.html.twig' %}
+                                        <div class="in-availability in-availability--without-gap">
+                                            <div class="in-availability__text" style="color: {{ getAvailabilityColor(productView.availability) }};">
+                                                {% include 'Front/Content/Product/productViewAvailability.html.twig' %}
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
-                            </div>
-                        </a>
-                    </li>
+                            </a>
+                        </li>
+                    {% endif %}
                 {% endfor %}
             </ul>
         </div>
