design: edit style for messages in the cart

--- a/assets/styles/frontend/common/components/in/discount-message.less
+++ b/assets/styles/frontend/common/components/in/discount-message.less
@@ -37,7 +37,7 @@
         font-size: @font-size-extra-small + 1px;
 
         @media @query-md {
-            margin: 10px 0 0 10px;
+            margin: 10px 0 auto 10px;
         }
 
         @media @query-xl {
