--- a/templates/Front/Content/Cart/index.html.twig
+++ b/templates/Front/Content/Cart/index.html.twig
@@ -153,14 +153,19 @@
                                         </div>
                                         <div class="table-cart__messages">
                                             <div class="table-cart__messages__left">
-                                                <div class="table-cart__messages__item in-message in-message--without-gap in-message--warning js-maximum-amount-warning display-none">
-                                                    {{ 'Větší množství není možné nakoupit'|trans }}
+                                                <div class="table-cart__messages__item table-cart__messages__item--left">
+                                                    {% if cartItem.product.isAvailableInDays(true) and not cartItem.saleItem %}
+                                                        <div class="in-message in-message--without-gap in-message--warning">
+                                                            {{ 'Tento produkt prodlouží dodání celé objednávky'|trans }}
+                                                        </div>
+                                                    {% endif %}
                                                 </div>
-                                                {% if cartItem.product.isAvailableInDays(true) and not cartItem.saleItem %}
-                                                    <div class="table-cart__messages__item in-message in-message--without-gap in-message--warning">
-                                                        {{ 'Tento produkt prodlouží dodání celé objednávky'|trans }}
+                                                
+                                                <div class="table-cart__messages__item js-maximum-amount-warning display-none">
+                                                    <div class="in-message in-message--without-gap in-message--warning">
+                                                        {{ 'Větší množství není možné nakoupit'|trans }}
                                                     </div>
-                                                {% endif %}
+                                                </div>
                                             </div>
                                             {{ discountExclusion.discountExclusionNotice(cartItem.product, registrationDiscountExclusionText, promoDiscountExclusionText, allDiscountExclusionText, 'in-discount-message--cart') }}
                                         </div>
