design: add style for stickers

--- a/assets/styles/frontend/common/components/box/detail.less
+++ b/assets/styles/frontend/common/components/box/detail.less
@@ -100,6 +100,14 @@
                 align-items: center;
                 height: 350px;
             }
+
+            &__sticker {
+                position: absolute;
+                top: 0;
+                right: 0;
+                width: 111px;
+                text-align: right;
+            }
         }
     }
 
@@ -255,7 +263,7 @@
     &__watch-dog {
         display: flex;
         width: 100%;
-        margin-top: 20px;
+        margin: 20px 0;
         text-align: center;
         justify-content: center;
 
