--- a/assets/styles/frontend/common/components/list/products-slider.less
+++ b/assets/styles/frontend/common/components/list/products-slider.less
@@ -220,6 +220,7 @@
         }
 
         &__image-wrap {
+            position: relative;
             text-decoration: none;
         }
 
@@ -243,6 +244,14 @@
                     max-height: @list-products-slider-item-image-height;
                 }
             }
+        }
+
+        &__sticker {
+            position: absolute;
+            top: 0;
+            right: 0;
+            width: 64px;
+            text-align: right;
         }
 
         &__info {
