--- a/assets/styles/frontend/common/components/list/products-bomb.less
+++ b/assets/styles/frontend/common/components/list/products-bomb.less
@@ -62,6 +62,14 @@
             }
         }
 
+        &__sticker {
+            position: absolute;
+            top: 10px;
+            right: 10px;
+            width: 64px;
+            text-align: right;
+        }
+
         &__price {
             display: flex;
             flex-direction: row;
