--- a/assets/styles/frontend/common/components/list/variants.less
+++ b/assets/styles/frontend/common/components/list/variants.less
@@ -76,6 +76,7 @@
                     max-height: auto;
                     
                     border: 1px solid @color-border;
+                    background-color: @color-f;
                 }
             }
 
