design: small css fixes

--- a/assets/styles/frontend/common/main-base.less
+++ b/assets/styles/frontend/common/main-base.less
@@ -40,6 +40,10 @@
 @import "../../../public/frontend_svg.less";
 @import "svg-custom.less";
 
+// Components
+//// wrap
+@import "components/wrap/page.less";
+
 //// in
 @import "components/in/availability.less";
 @import "components/in/overlay.less";
