--- a/assets/styles/frontend/common/main-category.less
+++ b/assets/styles/frontend/common/main-category.less
@@ -13,6 +13,7 @@
 @import "components/in/place.less";
 
 //// list
+@import "components/list/articles.less";
 @import "components/list/categories.less";
 @import "components/list/products.less";
 @import "components/list/products-line.less";
