design: fix design issues

--- a/assets/styles/frontend/common/main-product.less
+++ b/assets/styles/frontend/common/main-product.less
@@ -16,6 +16,7 @@
 @import "components/in/tab.less";
 @import "components/in/rating.less";
 @import "components/in/user-text.less";
+@import "components/in/stickers.less";
 
 //// list
 @import "components/list/articles.less";
