--- a/templates/Front/Content/AboutUs/info.html.twig
+++ b/templates/Front/Content/AboutUs/info.html.twig
@@ -99,9 +99,12 @@
                         </div>
                     </div>
                 </div>
-
                 <div class="box-contact__map">
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2524.1551171401034!2d15.052732216120594!3d50.75415737951836!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x470936993e9bf7e1%3A0x1bdf572ee2cd0366!2sTropic%20Liberec%20Ltd.!5e0!3m2!1ssk!2ssk!4v1598701456492!5m2!1ssk!2ssk" width="100%" height="323" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+                    {% if domainId == 1 %}
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d2524.1278497435014!2d15.0530416!3d50.754663!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4709368201c71f27%3A0xc9f478faf2be8d86!2zRHIuIE0uIEhvcsOha292w6kgNzYsIExpYmVyZWMsIMSMZXNrbw!5e0!3m2!1scs!2ssk!4v1601640397370!5m2!1scs!2ssk" width="100%" height="323" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+                    {% else %}
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2524.1551171401034!2d15.052732216120594!3d50.75415737951836!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x470936993e9bf7e1%3A0x1bdf572ee2cd0366!2sTropic%20Liberec%20Ltd.!5e0!3m2!1ssk!2ssk!4v1598701456492!5m2!1ssk!2ssk" width="100%" height="323" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+                    {% endif %}
                 </div>
 
                 <div class="wrap-well wrap-well--big-gap wrap-well--big-padding" id="js-contact-form-container">
