design: add fixed height for banners

--- a/assets/styles/frontend/common/components/in/place.less
+++ b/assets/styles/frontend/common/components/in/place.less
@@ -2,7 +2,9 @@
 
 .in-place {
     margin-bottom: @in-place-margin;
+    padding-bottom: 12.712%;
     text-align: center;
+    height: 0;
 
     font-size: 0;
 
