--- a/assets/styles/frontend/common/components/list/grid-images.less
+++ b/assets/styles/frontend/common/components/list/grid-images.less
@@ -27,6 +27,8 @@
         &__link {
             position: relative;
             display: block;
+            height: 0;
+            padding-bottom: 75%;
 
             font-size: 0;
         }
