--- a/templates/Front/Content/Product/productListMacro.html.twig
+++ b/templates/Front/Content/Product/productListMacro.html.twig
@@ -1,6 +1,7 @@
 {% macro list(productViews, listCssClass, productHeadingTagName) %}
     {% import 'Front/Content/Product/productSetViewMacro.html.twig' as productSetMacro %}
     {% import 'Front/Inline/Product/productStickersMacro.html.twig' as productStickersMacro %}
+    {% import 'Front/Inline/Cart/productAction.html.twig' as productAction %}
 
     {% if productViews|length > 0 %}
         <ul class="list-products js-list js-product-list {{ listCssClass|default('') }}">
@@ -81,8 +82,7 @@
                                     {% endif %}
 
                                     <div class="list-products__item__hover">
-
-                                        {{ render(controller('App\\Controller\\Front\\CartController:productActionAction', { listedProductView: productView } )) }}
+                                        {{ productAction.addToCart(productView) }}
                                     </div>
                                 </div>
                             </div>
@@ -96,6 +96,7 @@
 
 {% macro horizontalList(productViews, listCssClass, productHeadingTagName, type, showButton = false, onlyRefresh = false, showAmountInput = false) %}
     {% import 'Front/Inline/Product/productStickersMacro.html.twig' as productStickersMacro %}
+    {% import 'Front/Inline/Cart/productAction.html.twig' as productAction %}
 
     <div class="list-products-slider {% if showButton %}list-products-slider--with-button{% endif %} {{ listCssClass|default('') }} js-horizontal-list" data-type="{{ type }}" data-count-of-product="{{ productViews|length }}">
 
@@ -163,7 +164,7 @@
                                             </div>
                                         {% endif %}
                                         <div class="list-products-slider__item__hover">
-                                            {{ render(controller('App\\Controller\\Front\\CartController:productActionAction', {listedProductView: productView, showAmountInput: showAmountInput, onlyRefresh: onlyRefresh, type: 'slider'})) }}
+                                            {{ productAction.addToCart(productView, 'slider', showAmountInput, onlyRefresh) }}
                                         </div>
                                     {% endif %}
                                 </div>
@@ -236,13 +237,15 @@
 
 {% macro verticalList(productViews, listCssClass, productHeadingTagName) %}
     {% import 'Front/Content/Product/productAvailabilityMacro.html.twig' as availability %}
+    {% import 'Front/Inline/Cart/productAction.html.twig' as productAction %}
+
     <div class="{{ listCssClass }}" data-count-of-product="{{ productViews|length }}">
         {% for productView in productViews %}
             <div class="{{ listCssClass }}__item">
                 <a class="{{ listCssClass }}__item__image dont-print" href="{{ productView.action.detailUrl }}">
                     {{ image(productView.image, { size: 'mediumThumbnail', alt: productView.name, lazy: true }) }}
                 </a>
-                
+
                 <{{ productHeadingTagName|default('h2') }} class="{{ listCssClass }}__item__title" href="{{ productView.action.detailUrl }}">
                     {{ productView.name|striptags|raw }}
                 <{{ '/' ~ productHeadingTagName|default('h2') }}>
@@ -278,11 +281,7 @@
                         {% endif %}
 
                         <div class="{{ listCssClass }}__item__add-button">
-                            {{ render(controller('App\\Controller\\Front\\CartController:productActionAction', {
-                                listedProductView: productView,
-                                type: 'detailArticle',
-                                showAmountInput: false
-                            } )) }}
+                            {{ productAction.addToCart(productView, 'detailArticle', false) }}
                         </div>
                     </div>
                 </div>
