design: edit size of stickers

--- a/assets/styles/frontend/common/components/box/detail.less
+++ b/assets/styles/frontend/common/components/box/detail.less
@@ -105,8 +105,12 @@
                 position: absolute;
                 top: 0;
                 right: 0;
-                width: 111px;
+                height: 100px;
                 text-align: right;
+
+                img {
+                    max-height: 100%;
+                }
             }
         }
     }
