--- a/assets/styles/frontend/common/components/list/products-slider.less
+++ b/assets/styles/frontend/common/components/list/products-slider.less
@@ -250,8 +250,12 @@
             position: absolute;
             top: 0;
             right: 0;
-            width: 64px;
+            height: 57px;
             text-align: right;
+
+            img {
+                max-height: 100%;
+            }
         }
 
         &__info {
