--- a/templates/Admin/Content/Superadmin/migrations.html.twig
+++ b/templates/Admin/Content/Superadmin/migrations.html.twig
@@ -166,6 +166,13 @@
 				</td>
 				<td></td>
 			</tr>
+			<tr>
+				<td>Přesměrovací tabulka starých URL - importujte soubor s názvem "other_urls.csv"</td>
+				<td>
+					Soubor je exportován z Google dokumentu: https://docs.google.com/spreadsheets/d/1FycnNrfdeh8g-DQeipViLvEQ_XDJ_yCPLdjWNlSDFxI/
+				</td>
+				<td></td>
+			</tr>
 		</tbody>
 
 	</table>
