[TF-1055] Removing store from frontend

--- a/templates/Front/Layout/footer.html.twig
+++ b/templates/Front/Layout/footer.html.twig
@@ -83,7 +83,7 @@
                                     <h2 class="footer-middle__title">
                                         {{ 'Čeká na vás 500 m²,<br> kde si určitě vyberete.'|trans|raw }}
                                     </h2>
-                                    <a class="footer-middle__button btn-gradient btn-gradient--green" href="{{ url('front_store_index') }}">
+                                    <a class="footer-middle__button btn-gradient btn-gradient--green" href="{{ url('front_about_us_info') }}">
                                         <span class="btn-gradient__in">{{ 'Naše prodejna'|trans }}</span>
                                     </a>
                                 </div>
