Removed duplicated section with videos on product detail. Removed bullet points from sets on product detail.

--- a/assets/styles/frontend/common/todo.less
+++ b/assets/styles/frontend/common/todo.less
@@ -1,4 +1,4 @@
-// TODO TF-204
+// TODO KOD: https://shopsys.atlassian.net/browse/TF-204
 .cofidis-calculator {
     width: 100%;
     height: 100%;
@@ -24,5 +24,12 @@
     picture {
         display: inline-block;
         margin-bottom: 10px;
+    }
+}
+
+// TODO KOD: https://shopsys.atlassian.net/browse/TF-1036
+.box-products-slider {
+    .list-products__item-set {
+        list-style: none;
     }
 }
