noindex & nofollow while filtering

--- a/templates/Front/Content/Product/list.html.twig
+++ b/templates/Front/Content/Product/list.html.twig
@@ -6,7 +6,7 @@
 {% set domain = getDomain() %}
 
 {% block meta_robots %}
-    {{ paginator.metaRobots(paginationResult, disableIndexing) }}
+    {{ paginator.metaRobots(paginationResult, disableIndexing, disableIndexingAndFollowing) }}
 {% endblock %}
 {% block meta_rel_links %}
     {{ paginator.relLinks(paginationResult) }}
