--- a/assets/styles/frontend/common/components/list/grid-images.less
+++ b/assets/styles/frontend/common/components/list/grid-images.less
@@ -31,6 +31,10 @@
             padding-bottom: 75%;
 
             font-size: 0;
+
+            img {
+                .center-image()
+            }
         }
 
         &__item {
