--- a/templates/bundles/ShopsysFrameworkBundle/Admin/Content/Default/index.html.twig
+++ b/templates/bundles/ShopsysFrameworkBundle/Admin/Content/Default/index.html.twig
@@ -8,7 +8,76 @@
         {0} žádný nový | {1} 1 nový | [2,4] %count% nové | [5,Inf] %count% nových
         {% endtranschoice %})
     </a>
+{% endblock %}
+
+{% block main_content %}
+    <div class="clearfix">
+        <div class="float-left">
+            <h2>{{ 'Quick product search'|trans }}</h2>
+        </div>
+        <div class="text-right padding-top-10">
+            <a href="{{ url('admin_product_list', { as: true }) }}">
+                {{ 'Advanced search'|trans }}
+            </a>
+        </div>
+    </div>
+
+    <div class="margin-bottom-20">
+        {% include '@ShopsysFramework/Admin/Content/Product/quickSearchFormContent.html.twig' with {quickSearchForm: quickProductSearchForm} %}
+    </div>
+
+    <div class="box-overview">
+        <h2>{{ 'Sales overview (last 7 days)'|trans }}</h2>
+
+        <div class="box-overview__wrap">
+            <div class="box-overview__item">
+                {{ _self.statisticNumberWithPercent(newOrders, newOrdersTrend) }}
+                <div class="box-overview__item__text">
+                    {{ 'orders sold'|trans }}
+                </div>
+            </div>
+            <div class="box-overview__item">
+                {{ _self.statisticNumberWithPercent(newCustomers, newCustomersTrend) }}
+                <div class="box-overview__item__text">
+                    {{ 'new customers'|trans }}
+                </div>
+            </div>
+            <div class="box-overview__item">
+                {{ _self.statisticNumberWithPercent(ordersValue|formatNumber, ordersValueTrend) }}
+                <div class="box-overview__item__text">
+                    {{ 'turnover in'|trans }} {{ currencySymbolDefault() }}
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="wrap-box">
+        <div class="wrap-box__half wrap-box__half--in-row">
+            <canvas
+                class="js-line-chart"
+                data-chart-labels="{{ newOrdersInLastTwoWeeksLabels|json_encode }}"
+                data-chart-values="{{ newOrdersInLastTwoWeeksValues|json_encode }}"
+                data-chart-title="{{ 'New orders'|trans }}"
+            ></canvas>
+        </div>
+        <div class="wrap-box__half wrap-box__half--in-row">
+            <canvas
+                class="js-line-chart"
+                data-chart-labels="{{ registeredInLastTwoWeeksLabels|json_encode }}"
+                data-chart-values="{{ registeredInLastTwoWeeksValues|json_encode }}"
+                data-chart-title="{{ 'New registered customers'|trans }}"
+            ></canvas>
+        </div>
+    </div>
+
     <a href="{{ url('admin_default_schedulecategoriesimport') }}" class="btn wrap-bar__btn">
         {{ 'Spustit import kategorií'|trans }}
     </a>
+
+    {% if cronGridViews is not null %}
+        {% for instanceName, cronGridView in cronGridViews %}
+            <div class="wrap-bar"></div>
+            <h2>{{ 'Cron overview'|trans }} {% if cronGridViews|length > 1 %}({{ instanceName }}){% endif %}</h2>
+            {{ cronGridView.render() }}
+        {% endfor %}
+    {% endif %}
 {% endblock %}
