--- a/templates/Front/Content/Product/selectedFilterBoxMacro.html.twig
+++ b/templates/Front/Content/Product/selectedFilterBoxMacro.html.twig
@@ -1,6 +1,6 @@
 {% macro filterBox(filterForm, resetUrl, filterFormSubmitted) %}
     {% set domainId = getDomain().id %}
-    <div id="js-selected-filters-box" class="box-filter__top">
+    <div id="js-selected-filters-box" class="box-filter__top display-none">
         {% if filterFormSubmitted %}
             <div class="box-filter__selected">
                 <div class="box-filter__title">
