design: change size of sticker on the detail product

--- a/assets/styles/frontend/common/components/box/detail.less
+++ b/assets/styles/frontend/common/components/box/detail.less
@@ -105,8 +105,12 @@
                 position: absolute;
                 top: 0;
                 right: 0;
-                height: 100px;
+                height: 70px;
                 text-align: right;
+
+                @media @query-md {
+                    height: 100px;
+                }
 
                 img {
                     max-height: 100%;
