design: fix css issues

--- a/assets/styles/frontend/common/main-other-pages.less
+++ b/assets/styles/frontend/common/main-other-pages.less
@@ -1,6 +1,9 @@
 // Core
 @import "core/variables.less";
 @import "core/mixin/base.less";
+//// Mangific popup
+@import "libs/magnific/magnific-popup.less";
+@import "libs/magnific/magnific-popup-custom.less";
 
 // Components
 //// wrap
