--- a/assets/styles/frontend/common/components/box/products-bomb.less
+++ b/assets/styles/frontend/common/components/box/products-bomb.less
@@ -86,7 +86,7 @@
 
         @media @query-vl {
             left: 100%;
-            bottom: 0;
+            bottom: -30px;
             margin-left: 60px;
             margin-bottom: 0;
             width: 250px;
@@ -94,6 +94,7 @@
 
         @media @query-xl {
             width: 336px;
+            bottom: 0;
         }
     }
 }
