design: fix size of stickers

--- a/assets/styles/frontend/common/components/in/stickers.less
+++ b/assets/styles/frontend/common/components/in/stickers.less
@@ -7,7 +7,12 @@
     margin-left: -@in-stickers-item-gap;
 
     &__item {
+        height: 70px;
         margin-left: @in-stickers-item-gap;
         margin-bottom: @in-stickers-item-gap;
+
+        @media @query-md {
+            height: 100px;
+        }
     }
 }
