--- a/templates/Front/Layout/base.html.twig
+++ b/templates/Front/Layout/base.html.twig
@@ -28,7 +28,7 @@
         </script>
 
         {{ render(controller('App\\Controller\\Front\\HeurekaController:embedWidgetAction')) }}
-
+        {{ render(controller('App\\Controller\\Front\\SelfCanonicalController:getSelfCanonicalLink')) }}
         <link rel="apple-touch-icon" sizes="180x180" href="{{ asset('public/frontend/images/favicons/apple-touch-icon.png') }}">
         <link rel="icon" type="image/png" sizes="32x32" href="{{ asset('public/frontend/images/favicons/favicon-32x32.png') }}">
         <link rel="icon" type="image/png" sizes="16x16" href="{{ asset('public/frontend/images/favicons/favicon-16x16.png') }}">
